--- a/Html/53/index.html
+++ b/Html/53/index.html
@@ -9,7 +9,13 @@
 </head>
     <div id="main">
         <body>
-            <h1>Wheat</h1>
+            <header>
+                <nav>
+                    <a href="index.html">Home</a>
+                    <a href="Products.html">Products</a>
+                </nav>
+                <h1>Wheat</h1>
+            </header>
             <h2>Where true bread is made</h2>
             <p id="main_p">
             Wheat is a cherished sourdough bread bakery 
@@ -24,7 +30,7 @@
             of a perfectly crafted sourdough bread.
             </p>
             <div>   
-                <a href="Html/52/Products.html">Our products</a>
+                <a href="Products.html">Our products</a>
             </div>
             
         </body>
